Changes between 1.1.0 and ???:
---------------

 [pulse-binding]

 * Fixed lifetime issues with a handful of stream methods.
 * Tidied up error code handling:
    - add `PAErr` wrapper for i32 error type, for cleaner interfaces
    - move `strerror` function to `PAErr` method
    - rename `sterror` `PAErr` and `Code` methods to `to_string`
    - convert the error CStr to String for the users, no need to make users do it
    - add `PAErr` <=> `Code` `From` impls
 * Stream:
    - The buffer given by `begin_write` is now converted to a slice for you, rather than burdening
      the caller.
    - The return type of `begin_write` has been further simplified, ditching the custom
      `BufferResult` object.
    - Minor doc fixes
 * Derived more common traits for a handful of structs/enums
 * Implemented `PartialEq` for `::channelmap::Map` and `::volume::CVolume`
 * Removed Copy,Clone derives from def::SpawnApi
 * Improved time handling:
    - Added `Timeval` wrapper
    - Introduced `MicroSeconds` u64 wrapper, replacing use of `::sample::Usecs` (now removed)
    - Tidied up conversion constants. Note, names (and in some cases types) have changed.
    - libc::timeval re-exported (primarily for timer event callback use) from `::timeval` instead of
      `::mainloop::events::timer`
 * Added and put to use wrapper for 'quit return values'

 [pulse-simple-binding]

 * Tidied up error code handling, per above
 * Improved time handling, per above

Changes between 1.0.5 and 1.1.0:
---------------

 [pulse-binding]

 * Privatised the `from_raw` method of various objects, having become aware of the more granular
   `pub(crate)` type scope limiting syntax. Note, `from_raw_weak` methods designed for use in
   callbacks are still available.
 * Also privatised inner pointer attributes of structs in a few places on the same basis.
 * Privatised utils::unwrap_optional_callback function
 * Privatised timer event get_ptr method